force-app/main/default/objects/DocumentTemplateMapping__mdt/DocumentTemplateMapping__mdt.object-meta.xml
<CustomObject>
    <description>สำหรับเป็นตารางในการชี้เอกสารสัญญาและเอกสารแนบท้ายสัญญาที่จะนำมาเป็น Template</description>
    <label>Document Template Mapping</label>
    <pluralLabel>Document Template Mapping</pluralLabel>
</CustomObject>