force-app/main/default/objects/DocumentTemplateMapping__mdt/fields/AdditionalCondition__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCondition__c</fullName>
    <description>เอาไว้ใส่ condition อื่นๆ ที่ต้องการ filter record เพิ่ม</description>
    <label>Additional Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>