force-app/main/default/objects/DocumentTemplateMapping__mdt/fields/AdditionalConditionFields__c.field-meta.xml
<CustomField>
    <fullName>AdditionalConditionFields__c</fullName>
    <description>field ที่ใช้สำหรับการ query เพื่อมาใช้ใน Additional Condition ซึ่งจะทำการคั่นด้วย (,)</description>
    <label>Additional Condition Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>