force-app/main/default/objects/DocumentTemplateMapping__mdt/fields/DocumentTemplateName__c.field-meta.xml
<CustomField>
    <fullName>DocumentTemplateName__c</fullName>
    <description>ชื่อเอกสาร Master Template ที่อยู่ใน Object ZipFile__c ที่ record Type เป็น MasterDataType</description>
    <label>Document Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>