force-app/main/default/objects/DocumentTemplateMapping__mdt/fields/FieldAPINameSaveToExistingFile__c.field-meta.xml
<CustomField>
    <fullName>FieldAPINameSaveToExistingFile__c</fullName>
    <description>field API Name ถ้า field IsSaveToExistingFile มีค่าเป็น true จะต้องใส่ค่า Field API Name ของ Object ที่กด generate เอกสารที่เก็บ existing ContentDocumentId ลงใน field นี้ด้วย</description>
    <label>Field API Name save to existing file</label>
    <length>255</length>
    <type>Text</type>
</CustomField>