force-app/main/default/objects/DocumentTemplateMapping__mdt/fields/IsSaveToExistingFile__c.field-meta.xml
<CustomField>
    <fullName>IsSaveToExistingFile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ต้องการสร้างไฟล์ใหม่ หรือ save ทับไฟล์เดิม ถ้าต้องการสร้างไฟล์ทับไฟล์เดิมให้ set เป็น true</description>
    <label>Is Save To Existing File</label>
    <type>Checkbox</type>
</CustomField>