force-app/main/default/objects/DocumentTemplateMapping__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TH</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>TH/EN</fullName>
                <default>true</default>
                <label>TH/EN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>