force-app/main/default/objects/DocumentTemplateMapping__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>Object Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
                <default>true</default>
                <label>Contract</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>ClientOffer__c</fullName>
            </value>
            <value>
                <fullName>Quote__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>