force-app/main/default/objects/DocumentTemplateMapping__mdt/fields/RowsToShow__c.field-meta.xml
<CustomField>
    <fullName>RowsToShow__c</fullName>
    <description>เพื่อใช้ใน Syntax {REMOVETABLEROWS} โดยที่ใน field Rows to Show นี้ จะใส่ rows ที่ต้องการจะแสดงใน Table ของเอกสาร โดยที่
1. จะต้องเรียงลำดับจากน้อยไปมาก 
2. ในกรณีที่มีหลาย row ต้องคั่นด้วย , 
และใน code จะทำการไปหา row ที่จะต้องทำการลบ โดยดูจาก field Rows to Show นี้คู่กัน</description>
    <label>Rows to Show</label>
    <length>255</length>
    <type>Text</type>
</CustomField>