force-app/main/default/objects/DocumentTemplateMapping__mdt/fields/TemplateMappingType__c.field-meta.xml
<CustomField>
    <fullName>TemplateMappingType__c</fullName>
    <label>Template Mapping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>Reservation</fullName>
            </value>
            <value>
                <fullName>Client Offer</fullName>
            </value>
            <value>
                <fullName>Quotation</fullName>
            </value>
            <value>
                <fullName>Supplementary Agreement</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
                <isActive>false</isActive>
                <label>Addendum</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>