force-app/main/default/objects/DocumentTemplateMapping__mdt/fields/TotalRow__c.field-meta.xml
<CustomField>
    <fullName>TotalRow__c</fullName>
    <description>เพื่อใช้ใน Syntax {REMOVETABLEROWS} โดยที่ใน field Total Row นี้ จะใส่จำนวน rows ทั้งหมดที่มีใน Table</description>
    <label>Total Row</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>