force-app/main/default/objects/DocumentTemplateMapping__mdt/validationRules/Save_to_Existing_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Save_to_Existing_rule</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    IsSaveToExistingFile__c, 
    ISBLANK( FieldAPINameSaveToExistingFile__c ),
    false
)</errorConditionFormula>
    <errorMessage>Please Filled In FieldAPINameSaveToExistingFile__c  when you set IsSaveToExistingFile__c = true</errorMessage>
</ValidationRule>