force-app/main/default/objects/DocumentTemplateMapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsActive__c</columns>
    <columns>ObjectName__c</columns>
    <columns>DocumentTemplateName__c</columns>
    <columns>AdditionalCondition__c</columns>
    <columns>AdditionalConditionFields__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>