force-app/main/default/objects/DocumentTemplateMapping__mdt/listViews/Contract.listView-meta.xml
<ListView>
    <fullName>Contract</fullName>
    <columns>IsActive__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>TemplateMappingType__c</columns>
    <columns>DocumentTemplateName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ObjectName__c</field>
        <operation>equals</operation>
        <value>tms_Contract__c</value>
    </filters>
    <filters>
        <field>TemplateMappingType__c</field>
        <operation>equals</operation>
        <value>Contract</value>
    </filters>
    <label>Contract</label>
    <language>en_US</language>
</ListView>