force-app/main/default/objects/DocumentTemplateMapping__mdt/listViews/Memo.listView-meta.xml
<ListView>
    <fullName>Memo</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DocumentTemplateName__c</columns>
    <columns>ObjectName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>Memo</value>
    </filters>
    <label>Memo</label>
    <language>en_US</language>
</ListView>