force-app/main/default/objects/DocumentTemplateMapping__mdt/listViews/tms_Addendum.listView-meta.xml
<ListView>
    <fullName>tms_Addendum</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DocumentTemplateName__c</columns>
    <columns>IsActive__c</columns>
    <columns>ObjectName__c</columns>
    <columns>TemplateMappingType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TemplateMappingType__c</field>
        <operation>equals</operation>
        <value>Addendum</value>
    </filters>
    <label>Addendum</label>
    <language>en_US</language>
</ListView>