force-app/main/default/objects/DocumentTemplateMapping__mdt/listViews/tms_Inactive.listView-meta.xml
<ListView>
    <fullName>tms_Inactive</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>DocumentTemplateName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive</label>
    <language>en_US</language>
</ListView>