force-app/main/default/objects/DocumentTemplateMapping__mdt/listViews/tms_RevampAddendum.listView-meta.xml
<ListView>
    <fullName>tms_RevampAddendum</fullName>
    <columns>MasterLabel</columns>
    <columns>IsActive__c</columns>
    <columns>DocumentTemplateName__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DocumentTemplateName__c</field>
        <operation>contains</operation>
        <value>Agreement</value>
    </filters>
    <filters>
        <field>TemplateMappingType__c</field>
        <operation>equals</operation>
        <value>Addendum</value>
    </filters>
    <label>Revamp Addendum</label>
    <language>en_US</language>
</ListView>