force-app/main/default/objects/DocumentTemplateMapping__mdt/listViews/tms_RevampATM.listView-meta.xml
<ListView>
    <fullName>tms_RevampATM</fullName>
    <columns>MasterLabel</columns>
    <columns>IsActive__c</columns>
    <columns>DocumentTemplateName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DocumentTemplateName__c</field>
        <operation>equals</operation>
        <value>AGREEMENT</value>
    </filters>
    <label>Revamp ATM</label>
    <language>en_US</language>
</ListView>