force-app/main/default/objects/DocumentTemplateMapping__mdt/listViews/tms_RevampContract.listView-meta.xml
<ListView>
    <fullName>tms_RevampContract</fullName>
    <columns>MasterLabel</columns>
    <columns>IsActive__c</columns>
    <columns>DocumentTemplateName__c</columns>
    <columns>DeveloperName</columns>
    <columns>ObjectName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TemplateMappingType__c</field>
        <operation>equals</operation>
        <value>Contract</value>
    </filters>
    <filters>
        <field>DocumentTemplateName__c</field>
        <operation>contains</operation>
        <value>Agreement</value>
    </filters>
    <label>Revamp Contract</label>
    <language>en_US</language>
</ListView>